Update dependencies to patched versions; revise controller test
Pin logback (1.5.20), Spring Framework (6.2.10), Tomcat (10.1.44), and override commons-lang3 (3.13.0) to address vulnerabilities. Refactor `BeerControllerTest` pagination test to use `getFirst()` instead of `get(0)`.